建立 Forge 1.12.2 抢滩地基 / bootstrap the Forge 1.12.2 port
导入当前 ForgeDevEnv/RFG 构建环境，完整保留 main 源树，并完成首批生命周期、资源、公开 API、网络、蓝图、插件、任务、数据、形状和放置状态本地化。当前检查点仍处于预期编译红色，第三轮错误前沿已推进到客户端平台适配。

Import the current ForgeDevEnv/RFG baseline without excluding mainline sources, then localize the first lifecycle, resource, public API, networking, blueprint, plugin, task, data, shape, and placement-state batches. This checkpoint is intentionally still compile-red; the third compile frontier is now the client platform layer.