@@ -4,154 +4,89 @@ import com.rtsbuilding.rtsbuilding.common.blueprint.model.BlueprintFormat;
 import com.rtsbuilding.rtsbuilding.common.blueprint.model.BlueprintParseException;
 import com.rtsbuilding.rtsbuilding.common.blueprint.model.RtsBlueprint;
 import com.rtsbuilding.rtsbuilding.common.blueprint.model.RtsBlueprintBlock;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.HolderGetter;
-import net.minecraft.core.RegistryAccess;
-import net.minecraft.core.Vec3i;
-import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.core.registries.Registries;
-import net.minecraft.nbt.*;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.Blocks;
-import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.block.state.IBlockState;
+import net.minecraft.init.Blocks;
+import net.minecraft.nbt.CompressedStreamTools;
+import net.minecraft.nbt.NBTTagCompound;
+import net.minecraft.nbt.NBTTagList;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.Vec3i;
+import net.minecraftforge.common.util.Constants;
 
 import java.io.ByteArrayInputStream;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
-/**
- * 原版 Minecraft 结构 NBT（.nbt）蓝图读取器。
- * <p>
- * 解析由 Minecraft 结构方块保存的标准 NBT 格式，
- * 以及由 {@link BlueprintWriters#toVanillaStructureTag(RtsBlueprint)} 生成的内部格式。
- * 还包含一个从已解压的 {@link CompoundTag} 直接解析的公开方法，用于持久化恢复路径。
- */
+/** 原版结构 NBT 读取器，使用 1.12 Name/Properties 显式状态格式。 */
 public final class VanillaStructureNbtReader {
+    private VanillaStructureNbtReader() {}
 
-    private VanillaStructureNbtReader() {
+    static RtsBlueprint parse(byte[] data, String fileName) throws BlueprintParseException {
+        return parse(readCompressed(data, fileName), cleanName(fileName), fileName);
     }
 
-    /**
-     * 从压缩的字节数组解析原版 NBT 蓝图。
-     */
-    static RtsBlueprint parse(byte[] data, String fileName, RegistryAccess registryAccess) throws BlueprintParseException {
-        CompoundTag root = readCompressed(data, fileName);
-        return parse(root, cleanName(fileName), fileName, registryAccess);
-    }
-
-    /**
-     * 从已经解压的 {@link CompoundTag} 解析蓝图。
-     * <p>
-     * 用于持久化恢复路径——直接从存储的 NBT 重建蓝图，无需经过文件 I/O。
-     *
-     * @param root           包含蓝图数据的 NBT 标签
-     * @param name           蓝图名称
-     * @param sourceName     来源文件名
-     * @param registryAccess 注册表访问
-     * @return 解析后的蓝图对象
-     */
-    public static RtsBlueprint parse(CompoundTag root, String name, String sourceName, RegistryAccess registryAccess) {
-        if (!root.contains("palette", Tag.TAG_LIST) || !root.contains("blocks", Tag.TAG_LIST)) {
-            return RtsBlueprint.create(name, sourceName, BlueprintFormat.VANILLA_NBT, Vec3i.ZERO, List.of());
+    public static RtsBlueprint parse(NBTTagCompound root, String name, String sourceName) {
+        if (!root.hasKey("palette", Constants.NBT.TAG_LIST) || !root.hasKey("blocks", Constants.NBT.TAG_LIST)) {
+            return RtsBlueprint.create(name, sourceName, BlueprintFormat.VANILLA_NBT,
+                    new Vec3i(0, 0, 0), Collections.<RtsBlueprintBlock>emptyList());
+        }
+        NBTTagList paletteTag = root.getTagList("palette", Constants.NBT.TAG_COMPOUND);
+        List<BlueprintNbtCompat.StateResult> palette = new ArrayList<BlueprintNbtCompat.StateResult>(paletteTag.tagCount());
+        for (int i = 0; i < paletteTag.tagCount(); i++) {
+            palette.add(BlueprintNbtCompat.readState(paletteTag.getCompoundTagAt(i)));
         }
 
-        HolderGetter<Block> blocks = registryAccess.lookupOrThrow(Registries.BLOCK);
-        ListTag paletteTag = root.getList("palette", Tag.TAG_COMPOUND);
-        List<PaletteEntry> palette = new ArrayList<>(paletteTag.size());
-        for (int i = 0; i < paletteTag.size(); i++) {
-            CompoundTag paletteEntry = paletteTag.getCompound(i);
-            String missingId = missingBlockId(paletteEntry);
-            palette.add(missingId.isBlank()
-                    ? new PaletteEntry(NbtUtils.readBlockState(blocks, paletteEntry), "")
-                    : new PaletteEntry(Blocks.AIR.defaultBlockState(), missingId));
-        }
-
-        Vec3i size = readSize(root);
-        ListTag blockList = root.getList("blocks", Tag.TAG_COMPOUND);
-        List<RtsBlueprintBlock> out = new ArrayList<>();
-        for (int i = 0; i < blockList.size(); i++) {
-            CompoundTag blockTag = blockList.getCompound(i);
-            int stateIndex = blockTag.getInt("state");
-            if (stateIndex < 0 || stateIndex >= palette.size()) {
-                continue;
-            }
-            PaletteEntry paletteEntry = palette.get(stateIndex);
-            BlockState state = paletteEntry.state();
+        List<RtsBlueprintBlock> out = new ArrayList<RtsBlueprintBlock>();
+        NBTTagList blockList = root.getTagList("blocks", Constants.NBT.TAG_COMPOUND);
+        for (int i = 0; i < blockList.tagCount(); i++) {
+            NBTTagCompound blockTag = blockList.getCompoundTagAt(i);
+            int stateIndex = blockTag.getInteger("state");
+            if (stateIndex < 0 || stateIndex >= palette.size()) continue;
+            BlueprintNbtCompat.StateResult entry = palette.get(stateIndex);
             BlockPos pos = readPos(blockTag);
-            CompoundTag blockEntityTag = blockTag.contains("nbt", Tag.TAG_COMPOUND)
-                    ? blockTag.getCompound("nbt").copy()
-                    : new CompoundTag();
-            String materialItemId = blockTag.contains("rtsbuilding_material_item", Tag.TAG_STRING)
-                    ? blockTag.getString("rtsbuilding_material_item")
-                    : "";
-            if (!paletteEntry.missingBlockId().isBlank()) {
-                out.add(RtsBlueprintBlock.missing(pos, paletteEntry.missingBlockId(), blockEntityTag));
-                continue;
+            NBTTagCompound blockEntityTag = blockTag.hasKey("nbt", Constants.NBT.TAG_COMPOUND)
+                    ? blockTag.getCompoundTag("nbt").copy() : new NBTTagCompound();
+            if (entry.isMissing()) {
+                out.add(RtsBlueprintBlock.missing(pos, entry.missingBlockId(), blockEntityTag));
+            } else {
+                IBlockState state = entry.state();
+                if (state.getBlock() != Blocks.AIR && state.getBlock() != Blocks.STRUCTURE_VOID) {
+                    out.add(new RtsBlueprintBlock(pos, state, blockEntityTag, "",
+                            blockTag.getString("rtsbuilding_material_item")));
+                }
             }
-            if (state.isAir() || state.is(Blocks.STRUCTURE_VOID)) {
-                continue;
-            }
-            out.add(new RtsBlueprintBlock(pos, state, blockEntityTag, "", materialItemId));
         }
-        return RtsBlueprint.create(name, sourceName, BlueprintFormat.VANILLA_NBT, size, out);
+        return RtsBlueprint.create(name, sourceName, BlueprintFormat.VANILLA_NBT, readSize(root), out);
     }
 
-    /** 检测调色板条目是否对应缺失方块 */
-    private static String missingBlockId(CompoundTag paletteEntry) {
-        if (!paletteEntry.contains("Name", Tag.TAG_STRING)) {
-            return "";
-        }
-        String name = paletteEntry.getString("Name");
-        ResourceLocation id = ResourceLocation.tryParse(name);
-        if (id == null || !BuiltInRegistries.BLOCK.containsKey(id)) {
-            return name == null ? "" : name;
-        }
-        return "";
+    /** 迁移期兼容入口；1.12 不需要 RegistryAccess。 */
+    public static RtsBlueprint parse(NBTTagCompound root, String name, String sourceName, Object ignored) {
+        return parse(root, name, sourceName);
     }
 
-    /** 读取并解压 NBT 数据 */
-    private static CompoundTag readCompressed(byte[] data, String fileName) throws BlueprintParseException {
-        try {
-            return NbtIo.readCompressed(new ByteArrayInputStream(data), NbtAccounter.create(128L * 1024L * 1024L));
-        } catch (Exception ex) {
-            throw new BlueprintParseException("读取压缩 NBT 蓝图失败: " + fileName, ex);
-        }
+    private static NBTTagCompound readCompressed(byte[] data, String fileName) throws BlueprintParseException {
+        try { return CompressedStreamTools.readCompressed(new ByteArrayInputStream(data)); }
+        catch (Exception ex) { throw new BlueprintParseException("读取压缩 NBT 蓝图失败: " + fileName, ex); }
     }
 
-    /** 读取蓝图尺寸 */
-    private static Vec3i readSize(CompoundTag root) {
-        if (!root.contains("size", Tag.TAG_LIST)) {
-            return Vec3i.ZERO;
-        }
-        ListTag sizeTag = root.getList("size", Tag.TAG_INT);
-        if (sizeTag.size() < 3) {
-            return Vec3i.ZERO;
-        }
-        return new Vec3i(sizeTag.getInt(0), sizeTag.getInt(1), sizeTag.getInt(2));
+    private static Vec3i readSize(NBTTagCompound root) {
+        NBTTagList values = root.getTagList("size", Constants.NBT.TAG_INT);
+        return values.tagCount() < 3 ? new Vec3i(0, 0, 0)
+                : new Vec3i(values.getIntAt(0), values.getIntAt(1), values.getIntAt(2));
     }
 
-    /** 读取方块位置数据 */
-    private static BlockPos readPos(CompoundTag blockTag) {
-        ListTag posTag = blockTag.getList("pos", Tag.TAG_INT);
-        if (posTag.size() < 3) {
-            return BlockPos.ZERO;
-        }
-        return new BlockPos(posTag.getInt(0), posTag.getInt(1), posTag.getInt(2));
+    private static BlockPos readPos(NBTTagCompound blockTag) {
+        NBTTagList values = blockTag.getTagList("pos", Constants.NBT.TAG_INT);
+        return values.tagCount() < 3 ? BlockPos.ORIGIN
+                : new BlockPos(values.getIntAt(0), values.getIntAt(1), values.getIntAt(2));
     }
 
-    /** 从文件名中提取干净的名称 */
     private static String cleanName(String fileName) {
-        if (fileName == null || fileName.isBlank()) {
-            return "Blueprint";
-        }
+        if (fileName == null || fileName.trim().isEmpty()) return "Blueprint";
         int slash = Math.max(fileName.lastIndexOf('/'), fileName.lastIndexOf('\\'));
         String base = slash >= 0 ? fileName.substring(slash + 1) : fileName;
         int dot = base.lastIndexOf('.');
         return dot > 0 ? base.substring(0, dot) : base;
-    }
-
-    /** 内部调色板条目记录 */
-    private record PaletteEntry(BlockState state, String missingBlockId) {
     }
 }
