@@ -7,11 +7,11 @@ import com.rtsbuilding.rtsbuilding.server.progression.RtsFeature;
 import com.rtsbuilding.rtsbuilding.server.progression.RtsProgressionManager;
 import com.rtsbuilding.rtsbuilding.server.service.mining.RangeMiningHarvestTier;
 import com.rtsbuilding.rtsbuilding.server.task.RtsEffectAccumulator;
-import net.minecraft.network.chat.Component;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.world.InteractionHand;
-import net.minecraft.world.item.ItemStack;
+import net.minecraft.entity.player.EntityPlayerMP;
+import net.minecraft.item.ItemStack;
+import net.minecraft.util.EnumHand;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.text.TextComponentTranslation;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -27,7 +27,7 @@ public final class RtsPluginService {
     private RtsPluginService() {
     }
 
-    public static boolean canUse(ServerPlayer player, RtsFeature feature) {
+    public static boolean canUse(EntityPlayerMP player, RtsFeature feature) {
         if (!RtsProgressionManager.isEnabled()) {
             return true;
         }
@@ -43,7 +43,7 @@ public final class RtsPluginService {
         return false;
     }
 
-    public static int actionRadius(ServerPlayer player) {
+    public static int actionRadius(EntityPlayerMP player) {
         if (!RtsProgressionManager.isEnabled()) {
             return Config.maxActionRadiusBlocks();
         }
@@ -64,7 +64,7 @@ public final class RtsPluginService {
      * <p>返回 {@code null} 表示生存平衡已开启，但队伍没有安装采掘等级插件；
      * 关闭生存平衡时则直接视为无限制，不要求插件物品。
      */
-    public static RangeMiningHarvestTier rangeMiningHarvestTier(ServerPlayer player) {
+    public static RangeMiningHarvestTier rangeMiningHarvestTier(EntityPlayerMP player) {
         if (!RtsProgressionManager.isEnabled()) {
             return RangeMiningHarvestTier.UNLIMITED;
         }
@@ -85,27 +85,27 @@ public final class RtsPluginService {
         return highest;
     }
 
-    public static boolean canBypassHomeRadius(ServerPlayer player) {
+    public static boolean canBypassHomeRadius(EntityPlayerMP player) {
         if (!RtsProgressionManager.isEnabled()) {
             return true;
         }
         return hasEffectivePlugin(player, BuiltInRtsPluginCatalog.FIELD_DEPLOYMENT_PLUGIN);
     }
 
-    public static boolean installFromInventorySlot(ServerPlayer player, int inventorySlot) {
-        if (player == null || inventorySlot < 0 || inventorySlot >= player.getInventory().items.size()) {
+    public static boolean installFromInventorySlot(EntityPlayerMP player, int inventorySlot) {
+        if (player == null || inventorySlot < 0 || inventorySlot >= player.inventory.mainInventory.size()) {
             return fail(player, "message.rtsbuilding.plugin.invalid_slot");
         }
-        ItemStack stack = player.getInventory().items.get(inventorySlot);
+        ItemStack stack = player.inventory.mainInventory.get(inventorySlot);
         InstallResult result = validateInstall(player, stack);
         if (!result.success()) {
             return fail(player, result.messageKey());
         }
-        ItemStack installedStack = stack.split(1);
+        ItemStack installedStack = stack.splitStack(1);
         if (stack.isEmpty()) {
-            player.getInventory().setItem(inventorySlot, ItemStack.EMPTY);
+            player.inventory.setInventorySlotContents(inventorySlot, ItemStack.EMPTY);
         }
-        player.getInventory().setChanged();
+        player.inventory.markDirty();
         boolean replaced = addInstalled(player, result.definition(), installedStack);
         syncInventory(player);
         success(player, replaced
@@ -114,20 +114,20 @@ public final class RtsPluginService {
         return true;
     }
 
-    public static boolean installHeldPlugin(ServerPlayer player, InteractionHand hand) {
+    public static boolean installHeldPlugin(EntityPlayerMP player, EnumHand hand) {
         if (player == null || hand == null) {
             return false;
         }
-        ItemStack stack = player.getItemInHand(hand);
+        ItemStack stack = player.getHeldItem(hand);
         InstallResult result = validateInstall(player, stack);
         if (!result.success()) {
             return fail(player, result.messageKey());
         }
-        ItemStack installedStack = stack.split(1);
+        ItemStack installedStack = stack.splitStack(1);
         if (stack.isEmpty()) {
-            player.setItemInHand(hand, ItemStack.EMPTY);
+            player.setHeldItem(hand, ItemStack.EMPTY);
         }
-        player.getInventory().setChanged();
+        player.inventory.markDirty();
         boolean replaced = addInstalled(player, result.definition(), installedStack);
         syncInventory(player);
         success(player, replaced
@@ -136,7 +136,7 @@ public final class RtsPluginService {
         return true;
     }
 
-    public static boolean uninstall(ServerPlayer player, ResourceLocation pluginId) {
+    public static boolean uninstall(EntityPlayerMP player, ResourceLocation pluginId) {
         if (player == null || pluginId == null) {
             return false;
         }
@@ -149,12 +149,15 @@ public final class RtsPluginService {
             if (!entry.isOwnedBy(player)) {
                 return fail(player, "message.rtsbuilding.plugin.not_yours");
             }
-            ItemStack returning = entry.plugin().stack().copyWithCount(1);
-            if (!player.getInventory().add(returning)) {
+            ItemStack returning = RtsInstalledPlugin.copyOne(entry.plugin().stack());
+            if (!canFitWholeStack(player, returning)) {
+                return fail(player, "message.rtsbuilding.plugin.inventory_full");
+            }
+            if (!player.inventory.addItemStackToInventory(returning)) {
                 return fail(player, "message.rtsbuilding.plugin.inventory_full");
             }
             installed.remove(i);
-            player.getInventory().setChanged();
+            player.inventory.markDirty();
             RtsPluginTeamService.saveInstalledPlugins(player, installed);
             syncRelatedPlayers(player);
             syncInventory(player);
@@ -164,12 +167,12 @@ public final class RtsPluginService {
         return fail(player, "message.rtsbuilding.plugin.not_installed");
     }
 
-    public static void syncToPlayer(ServerPlayer player) {
-        if (player != null) RtsEffectAccumulator.INSTANCE.markPluginState(player.getUUID());
+    public static void syncToPlayer(EntityPlayerMP player) {
+        if (player != null) RtsEffectAccumulator.INSTANCE.markPluginState(player.getUniqueID());
     }
 
     /** 仅由 Tick 末 Effect Committer 调用，普通业务入口只登记最新完整快照。 */
-    public static void syncToPlayerNow(ServerPlayer player) {
+    public static void syncToPlayerNow(EntityPlayerMP player) {
         if (player == null) {
             return;
         }
@@ -193,32 +196,32 @@ public final class RtsPluginService {
             fieldDeployment.add(definition.fieldDeployment());
             personal.add(effective.personal());
             ownerNames.add(effective.ownerName());
-            stacks.add(entry.stack().copyWithCount(1));
+            stacks.add(RtsInstalledPlugin.copyOne(entry.stack()));
         }
         RtsClientboundPackets.sendToPlayer(player, new S2CRtsPluginStatePayload(
                 pluginIds, families, radii, fieldDeployment, personal, ownerNames, stacks,
                 RtsPluginTeamService.teamLabel(player)));
     }
 
-    public static void syncRelatedPlayers(ServerPlayer player) {
-        for (ServerPlayer relatedPlayer : RtsPluginTeamService.relatedPlayers(player)) {
+    public static void syncRelatedPlayers(EntityPlayerMP player) {
+        for (EntityPlayerMP relatedPlayer : RtsPluginTeamService.relatedPlayers(player)) {
             syncToPlayer(relatedPlayer);
             RtsProgressionManager.syncToPlayer(relatedPlayer);
         }
     }
 
-    public static void migrateLegacySkillTree(ServerPlayer player) {
+    public static void migrateLegacySkillTree(EntityPlayerMP player) {
         List<RtsPluginDefinition> migrated = RtsLegacySkillTreeMigration.migrate(player);
         if (migrated.isEmpty()) {
             return;
         }
-        player.displayClientMessage(RtsLegacySkillTreeMigration.migrationMessage(migrated), false);
+        player.sendStatusMessage(RtsLegacySkillTreeMigration.migrationMessage(migrated), false);
         syncRelatedPlayers(player);
     }
 
-    public static List<RtsInstalledPlugin> installedPlugins(ServerPlayer player) {
+    public static List<RtsInstalledPlugin> installedPlugins(EntityPlayerMP player) {
         if (player == null) {
-            return List.of();
+            return java.util.Collections.emptyList();
         }
         List<RtsPluginTeamService.StoredPlugin> stored = RtsPluginTeamService.installedPlugins(player);
         List<RtsInstalledPlugin> installed = new ArrayList<>(stored.size());
@@ -232,7 +235,7 @@ public final class RtsPluginService {
         return RtsPluginRegistry.isPluginItem(stack);
     }
 
-    private static InstallResult validateInstall(ServerPlayer player, ItemStack stack) {
+    private static InstallResult validateInstall(EntityPlayerMP player, ItemStack stack) {
         RtsPluginDefinition definition = RtsPluginRegistry.byItem(stack);
         if (definition == null) {
             return InstallResult.fail("message.rtsbuilding.plugin.not_plugin");
@@ -256,7 +259,7 @@ public final class RtsPluginService {
      * <p>旧插件优先退回安装者背包；背包确实放不下时掉在玩家脚边，绝不静默吞掉。
      */
     private static boolean addInstalled(
-            ServerPlayer player, RtsPluginDefinition definition, ItemStack installedStack) {
+            EntityPlayerMP player, RtsPluginDefinition definition, ItemStack installedStack) {
         List<RtsPluginTeamService.StoredPlugin> installed = RtsPluginTeamService.installedPlugins(player);
         boolean replaced = false;
         if (definition.family().mutuallyExclusive()) {
@@ -272,28 +275,43 @@ public final class RtsPluginService {
             }
         }
         installed.add(new RtsPluginTeamService.StoredPlugin(
-                new RtsInstalledPlugin(definition.id(), installedStack, player.level().getGameTime()),
-                player.getUUID(),
+                new RtsInstalledPlugin(definition.id(), installedStack, player.world.getTotalWorldTime()),
+                player.getUniqueID(),
                 player.getGameProfile().getName()));
         RtsPluginTeamService.saveInstalledPlugins(player, installed);
         syncRelatedPlayers(player);
         return replaced;
     }
 
-    private static void returnReplacedPlugin(ServerPlayer player, ItemStack installedStack) {
+    private static void returnReplacedPlugin(EntityPlayerMP player, ItemStack installedStack) {
         ItemStack returning = installedStack == null
                 ? ItemStack.EMPTY
-                : installedStack.copyWithCount(1);
+                : RtsInstalledPlugin.copyOne(installedStack);
         if (returning.isEmpty()) {
             return;
         }
-        if (!player.getInventory().add(returning)) {
-            player.drop(returning, false);
+        if (!player.inventory.addItemStackToInventory(returning)) {
+            player.dropItem(returning, false);
         }
-        player.getInventory().setChanged();
+        player.inventory.markDirty();
     }
 
-    private static boolean hasPlugin(ServerPlayer player, ResourceLocation pluginId) {
+    /** 卸载是事务式操作；先证明整栈可放入，避免 InventoryPlayer 的部分插入制造复制。 */
+    private static boolean canFitWholeStack(EntityPlayerMP player, ItemStack stack) {
+        if (stack == null || stack.isEmpty()) return true;
+        int remaining = stack.getCount();
+        for (ItemStack slot : player.inventory.mainInventory) {
+            if (slot.isEmpty()) return true;
+            if (ItemStack.areItemsEqual(slot, stack) && ItemStack.areItemStackTagsEqual(slot, stack)) {
+                remaining -= Math.max(0, Math.min(slot.getMaxStackSize(), player.inventory.getInventoryStackLimit())
+                        - slot.getCount());
+                if (remaining <= 0) return true;
+            }
+        }
+        return false;
+    }
+
+    private static boolean hasPlugin(EntityPlayerMP player, ResourceLocation pluginId) {
         if (player == null || pluginId == null) {
             return false;
         }
@@ -305,7 +323,7 @@ public final class RtsPluginService {
         return false;
     }
 
-    private static boolean hasEffectivePlugin(ServerPlayer player, ResourceLocation pluginId) {
+    private static boolean hasEffectivePlugin(EntityPlayerMP player, ResourceLocation pluginId) {
         if (player == null || pluginId == null) {
             return false;
         }
@@ -317,9 +335,9 @@ public final class RtsPluginService {
         return false;
     }
 
-    private static boolean fail(ServerPlayer player, String key) {
-        if (player != null && key != null && !key.isBlank()) {
-            player.displayClientMessage(Component.translatable(key), true);
+    private static boolean fail(EntityPlayerMP player, String key) {
+        if (player != null && key != null && !key.isEmpty()) {
+            player.sendStatusMessage(new TextComponentTranslation(key), true);
         }
         return false;
     }
@@ -328,20 +346,35 @@ public final class RtsPluginService {
      * 插件装卸会直接改玩家背包；立即同步槽位，避免客户端继续把已安装插件
      * 当作快捷栏里的挖掘工具发送给服务端。
      */
-    private static void syncInventory(ServerPlayer player) {
-        player.inventoryMenu.broadcastChanges();
-        if (player.containerMenu != player.inventoryMenu) {
-            player.containerMenu.broadcastChanges();
+    private static void syncInventory(EntityPlayerMP player) {
+        player.inventoryContainer.detectAndSendChanges();
+        if (player.openContainer != player.inventoryContainer) {
+            player.openContainer.detectAndSendChanges();
+        }
+        player.getServer().getPlayerList().syncPlayerInventory(player);
+    }
+
+    private static void success(EntityPlayerMP player, String key) {
+        if (player != null && key != null && !key.isEmpty()) {
+            player.sendStatusMessage(new TextComponentTranslation(key), true);
         }
     }
 
-    private static void success(ServerPlayer player, String key) {
-        if (player != null && key != null && !key.isBlank()) {
-            player.displayClientMessage(Component.translatable(key), true);
-        }
-    }
+    private static final class InstallResult {
+        private final boolean success;
+        private final RtsPluginDefinition definition;
+        private final String messageKey;
 
-    private record InstallResult(boolean success, RtsPluginDefinition definition, String messageKey) {
+        private InstallResult(boolean success, RtsPluginDefinition definition, String messageKey) {
+            this.success = success;
+            this.definition = definition;
+            this.messageKey = messageKey;
+        }
+
+        boolean success() { return success; }
+        RtsPluginDefinition definition() { return definition; }
+        String messageKey() { return messageKey; }
+
         static InstallResult success(RtsPluginDefinition definition) {
             return new InstallResult(true, definition, "");
         }
