@@ -12,17 +12,21 @@ import java.util.UUID;
  * <p>阶段 1 使用每任务独占资产，不共享、不做引用计数。相同 TaskId 与 kind 必须得到相同 ID，确保网络重试、
  * legacy 重迁移和 blob→manifest 崩溃恢复不会创建第二份身份。</p>
  */
-public record TaskAssetId(UUID value) implements Comparable<TaskAssetId> {
+public final class TaskAssetId implements Comparable<TaskAssetId> {
     private static final String NAMESPACE = "rtsbuilding:task-asset:v1:";
 
-    public TaskAssetId {
-        Objects.requireNonNull(value, "value");
+    private final UUID value;
+
+    public TaskAssetId(UUID value) {
+        this.value = Objects.requireNonNull(value, "value");
     }
+
+    public UUID value() { return value; }
 
     public static TaskAssetId forTask(TaskId taskId, String kind) {
         Objects.requireNonNull(taskId, "taskId");
         Objects.requireNonNull(kind, "kind");
-        if (kind.isBlank() || kind.length() > 64) throw new IllegalArgumentException("asset kind 无效");
+        if (kind.trim().isEmpty() || kind.length() > 64) throw new IllegalArgumentException("asset kind 无效");
         String seed = NAMESPACE + kind + ':' + taskId;
         return new TaskAssetId(UUID.nameUUIDFromBytes(seed.getBytes(StandardCharsets.UTF_8)));
     }
@@ -35,6 +39,14 @@ public record TaskAssetId(UUID value) implements Comparable<TaskAssetId> {
     public int compareTo(TaskAssetId other) {
         return value.compareTo(other.value);
     }
+
+    @Override
+    public boolean equals(Object other) {
+        return this == other || (other instanceof TaskAssetId && value.equals(((TaskAssetId) other).value));
+    }
+
+    @Override
+    public int hashCode() { return value.hashCode(); }
 
     @Override
     public String toString() {
